--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-# Core Dependencies - Install opencv-python-headless FIRST
+# Core Dependencies
+# Use headless build for Streamlit Cloud (no GUI backend required)
 opencv-python-headless==4.9.0.80
-
 numpy>=1.24.0
 scipy>=1.10.0
 PyYAML>=6.0
@@ -21,7 +21,7 @@ plotly>=5.18.0
 
 # Utils
 scikit-learn>=1.3.0
-# Removed: scikit-image (pulls in opencv-python, conflicts with headless)
+scikit-image>=0.22.0
 pandas>=2.1.0
 tqdm>=4.66.0
 requests>=2.31.0
@@ -42,7 +42,3 @@ tqdm==4.66.1
 # Development
 pytest==7.4.3
 black==23.12.1
-
-# CRITICAL FIX: Force opencv-python-headless to override any opencv-python installed by dependencies
-# This must be at the END to ensure it takes precedence
-opencv-python-headless==4.9.0.80
