--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ plotly>=5.18.0
 
 # Utils
 scikit-learn>=1.3.0
-scikit-image>=0.22.0
+# scikit-image>=0.22.0  # Removed: causes opencv-python conflict on Streamlit Cloud
 pandas>=2.1.0
 tqdm>=4.66.0
 requests>=2.31.0
