--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,6 @@ tqdm==4.66.1
 # Development
 pytest==7.4.3
 black==23.12.1
+
+# CRITICAL: Force opencv-python-headless installation LAST to override any opencv-python
+opencv-python-headless==4.9.0.80
