--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Core Dependencies
 # Use headless build for Streamlit Cloud (no GUI backend required)
-opencv-python-headless==4.9.0.80
 numpy>=1.24.0
 scipy>=1.10.0
 PyYAML>=6.0
@@ -9,6 +8,9 @@ PyYAML>=6.0
 torch>=2.2.0
 torchvision>=0.17.0
 ultralytics>=8.0.0
+
+# CRITICAL: Install headless opencv BEFORE any package that might pull opencv-python
+opencv-python-headless==4.9.0.80
 
 # Tracking
 deep-sort-realtime>=1.3.0
@@ -45,3 +47,6 @@ black==23.12.1
 
 # CRITICAL: Force opencv-python-headless installation LAST to override any opencv-python
 opencv-python-headless==4.9.0.80
+
+# Prevent opencv-python (regular) from being installed
+opencv-python==0.0.0  # This forces pip to use headless version only
