--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@
 # Use headless build for Streamlit Cloud (no GUI backend required)
 numpy>=1.24.0
 scipy>=1.10.0
-PyYAML>=6.0
+PyYAML==6.0.1
 
-# Deep Learning & Detection
-torch>=2.2.0
-torchvision>=0.17.0
+# Deep Learning & Detection (CPU wheels)
+# Torch CPU avoids CUDA downloads on Streamlit Cloud
+torch==2.2.2
+torchvision==0.17.2
 ultralytics>=8.0.0
 
-# CRITICAL: Install headless opencv BEFORE any package that might pull opencv-python
+# CRITICAL: headless OpenCV only (avoids GUI/Qt deps)
 opencv-python-headless==4.9.0.80
 
 # Tracking
@@ -25,13 +26,10 @@ plotly>=5.18.0
 scikit-learn>=1.3.0
 # scikit-image>=0.22.0  # Removed: causes opencv-python conflict on Streamlit Cloud
 pandas>=2.1.0
-tqdm>=4.66.0
+tqdm>=4.66.1
 requests>=2.31.0
 python-dotenv>=1.0.0
 imageio-ffmpeg==0.4.9
-
-# Configuration
-PyYAML==6.0.1
 
 # Optional: Web Dashboard
 streamlit==1.30.0
@@ -39,12 +37,7 @@ flask==3.0.0
 
 # Optional: Metrics & Logging
 tensorboard==2.15.1
-tqdm==4.66.1
 
 # Development
 pytest==7.4.3
 black==23.12.1
-
-# CRITICAL: Force opencv-python-headless installation LAST to override any opencv-python
-opencv-python-headless==4.9.0.80
-opencv-python-headless==4.9.0.80
