--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@
 opencv-python-headless==4.9.0.80
 numpy>=1.24.0
 scipy>=1.10.0
-PyYAML>=6.0
+PyYAML==6.0.1
 
 # Deep Learning & Detection
-torch>=2.2.0
-torchvision>=0.17.0
+torch>=2.1.0
+torchvision>=0.16.0
 ultralytics>=8.0.0
 
 # Tracking
@@ -23,7 +23,7 @@ plotly>=5.18.0
 scikit-learn>=1.3.0
 scikit-image>=0.22.0
 pandas>=2.1.0
-tqdm>=4.66.0
+tqdm==4.66.1
 requests>=2.31.0
 python-dotenv>=1.0.0
 imageio-ffmpeg==0.4.9
@@ -32,13 +32,8 @@ imageio-ffmpeg==0.4.9
 PyYAML==6.0.1
 
 # Optional: Web Dashboard
-streamlit==1.30.0
-flask==3.0.0
+streamlit==1.32.0
 
 # Optional: Metrics & Logging
-tensorboard==2.15.1
+tensorboard==2.15.0
 tqdm==4.66.1
-
-# Development
-pytest==7.4.3
-black==23.12.1
